terraform/security_groups.tf
resource "aws_security_group" "ssh_lambda" {
  name   = "ssh-lambdas"
  vpc_id = var.vpc_id
}

resource "aws_security_group_rule" "lambda_ssh_egress" {
  security_group_id = aws_security_group.ssh_lambda.id
  type              = "egress"
  description       = "SSH"
  to_port           = 22
  from_port         = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "lambda_https_egress" {
  security_group_id = aws_security_group.ssh_lambda.id
  type              = "egress"
  description       = "HTTPS"
  to_port           = 443
  from_port         = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}
